[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/TileMapManager.gd" type="Script" id=1]
[ext_resource path="res://ColorRect.gd" type="Script" id=2]
[ext_resource path="res://assets/new_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://ConqueredTile.shader" type="Shader" id=4]
[ext_resource path="res://scripts/ConqueredMap.gd" type="Script" id=5]

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/distortion_speed = 0.1
shader_param/distortion_scale = 0.005

[node name="TileMaps" type="Node2D"]
scale = Vector2( 4, 4 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = -0.662506
margin_top = -0.662506
margin_right = 669.338
margin_bottom = 473.337
color = Color( 0.290196, 0.811765, 0.243137, 1 )
script = ExtResource( 2 )

[node name="Floor" type="TileMap" parent="."]
z_index = -2
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="FloorOverlay" type="TileMap" parent="."]
z_index = -2
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="FloorSpecial" type="TileMap" parent="."]
z_index = -2
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="LowerLayer" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="WallOverlay" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="UpperLayer" type="TileMap" parent="."]
position = Vector2( 0, -16 )
z_index = 1
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="ConqueredMap" type="TileMap" parent="."]
show_behind_parent = true
material = SubResource( 2 )
z_index = 2
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 589835, 26, 0, 655371, 26, 0, 655372, 0, 0, 720907, 26, 0, 720908, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 786442, 26, 0, 786443, 0, 0, 786444, 0, 0, 786445, 26, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 851978, 26, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 917514, 26, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 983050, 26, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 1048586, 26, 0, 1048587, 0, 0, 1048588, 0, 0, 1048589, 0, 0, 1048596, 0, 0, 1048597, 0, 0, 1048598, 0, 0, 1048599, 0, 0, 1114122, 26, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1114126, 0, 0, 1114133, 0, 0, 1114134, 0, 0, 1179659, 26, 0, 1179660, 26, 0, 1179661, 26, 0, 1179662, 26, 0 )
script = ExtResource( 5 )
conquered_tile_index = 23
