[gd_scene load_steps=9 format=2]

[ext_resource path="res://AdditionalFiles/Copyright Free Rock Music Instrumental.wav" type="AudioStream" id=1]
[ext_resource path="res://scripts/AudioStreamPlayer2D.gd" type="Script" id=2]
[ext_resource path="res://scripts/TileMapManager.gd" type="Script" id=3]
[ext_resource path="res://assets/new_tileset.tres" type="TileSet" id=4]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/BlockPlacer.gd" type="Script" id=6]
[ext_resource path="res://scenes/Turret.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/EnemySpawner.gd" type="Script" id=8]

[node name="Node2D" type="Node2D"]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 270.252, 180.025 )
stream = ExtResource( 1 )
volume_db = -80.0
script = ExtResource( 2 )

[node name="TileMaps" type="Node2D" parent="."]
scale = Vector2( 6, 6 )
script = ExtResource( 3 )

[node name="LowerLayer" type="TileMap" parent="TileMaps"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 8, 8 )
format = 1

[node name="UpperLayer" type="TileMap" parent="TileMaps"]
position = Vector2( 0, -8 )
z_index = 2
tile_set = ExtResource( 4 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 1610612737, 0, 0, 1610612738, 0, 0 )

[node name="ConqueredMap" type="TileMap" parent="TileMaps"]
z_index = 1
tile_set = ExtResource( 4 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 327696, 8, 0, 327697, 8, 0, 327698, 8, 0, 327699, 8, 0, 327700, 8, 0, 393221, 8, 0, 393222, 8, 0, 393223, 8, 0, 393224, 8, 0, 393225, 8, 0, 393226, 8, 0, 393231, 8, 0, 393232, 8, 0, 458757, 8, 0, 458762, 8, 0, 458767, 8, 0, 458768, 8, 0, 524293, 8, 0, 524298, 8, 0, 524304, 8, 0, 524305, 8, 0, 524306, 8, 0, 524307, 8, 0, 589829, 8, 0, 589834, 8, 0, 589839, 8, 0, 589840, 8, 0, 589841, 8, 0, 589843, 8, 0, 655365, 8, 0, 655370, 8, 0, 655371, 8, 0, 655372, 8, 0, 655375, 8, 0, 655377, 8, 0, 655379, 8, 0, 720901, 8, 0, 720911, 8, 0, 720913, 8, 0, 720915, 8, 0, 786437, 8, 0, 786447, 8, 0, 786448, 8, 0, 786449, 8, 0, 786451, 8, 0, 851973, 8, 0, 851984, 8, 0, 851985, 8, 0, 851987, 8, 0, 917509, 8, 0, 917510, 8, 0, 917511, 8, 0, 917513, 8, 0, 917514, 8, 0, 917515, 8, 0, 917516, 8, 0, 917517, 8, 0, 917518, 8, 0, 917519, 8, 0, 917520, 8, 0, 917521, 8, 0, 917522, 8, 0, 917523, 8, 0, 1507367, 8, 0 )

[node name="Player" parent="." instance=ExtResource( 5 )]

[node name="BlockPlacer" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Turret" parent="." instance=ExtResource( 7 )]

[node name="Enemies" type="Node2D" parent="."]

[node name="EnemySpawner" type="Node2D" parent="."]
editor/display_folded = true
script = ExtResource( 8 )

[node name="Point1" type="Position2D" parent="EnemySpawner"]
position = Vector2( 18.9525, 14.44 )

[node name="Point2" type="Position2D" parent="EnemySpawner"]
position = Vector2( 1009.93, 578.538 )
